src/objects/Promoter_io_Callout__c.object
<CustomObject>
    <fields>
        <fullName>API_URL__c</fullName>
        <label>API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageNumber__c</fullName>
        <label>PageNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Time__c</fullName>
        <label>Session Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Promoter.io Callout</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PageNumber__c</columns>
        <columns>Session_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Promoter.io  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promoter.io Callouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>